fixed input issue on safari

--- a/themes/book/assets/_custom.scss
+++ b/themes/book/assets/_custom.scss
@@ -465,9 +465,10 @@ button.cta {
 
 @media (max-width: 900px){
   #main-menu-control:checked + #top-nav{
-    height: 100px!important;
-
-    min-height:200px;
+    height: 100px !important;
+    height: 100px !important;
+    min-height: 293px;
+    overflow-y: auto;
   }
 
   #button-main-menu-mobile {
